fix layout list saving transaction, update note
fix layout list saving transaction, update note

--- a/src/app/savings/savings-account-view/form-dialog/update-saving-account/update-saving-account.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/update-saving-account/update-saving-account.component.html
@@ -10,10 +10,10 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-<!--  <mat-form-field *ngIf="form.contains('accountNumber')" fxFlex="48%">-->
-<!--    <mat-label>Số tài khoản</mat-label>-->
-<!--    <input matInput formControlName="accountNumber">-->
-<!--  </mat-form-field>-->
+  <mat-form-field *ngIf="form.contains('note')" fxFlex="48%">
+    <mat-label>Ghi chú</mat-label>
+    <input matInput formControlName="note">
+  </mat-form-field>
 
 
 <!--  <mat-form-field *ngIf="form.contains('checkNumber')" fxFlex="48%">-->
