--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -166,7 +166,7 @@
 
         </mat-card-content>
 
-        <div class="example-container mat-elevation-z8">
+        <div class=" mat-elevation-z8">
           <mat-form-field class="filter">
             <input matInput #filter (keyup)="applyFilter($event.target.value)" placeholder="Filter">
             <button mat-icon-button matSuffix aria-label="clear" *ngIf="filter.value" (click)="filter.value=''; applyFilter('');">
