--- a/src/app/terminals/edit-terminals/edit-terminals.component.scss
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.scss
@@ -1,54 +1,18 @@
-.mat-raised-button{
-    height: max-content;
-    margin-top: 15px;
+.container{
+    max-width: 80rem
 }
-.filter {
-    padding-left: 20px;
-    width: 300px;
-}
-.activeCheckBox{
-  padding-top: 34px;
-}
-table {
-    width: 100%;
-  }
   
-  th, td {
-    overflow: hidden;
+//   .example-table-container {
+//     position: relative;
+//     max-height: 600px;
+//     overflow: auto;
+//   }
+  
+  table {
     width: 100%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 
-.mat-column-Office{
-    flex: none;
-    width: 20%;
-}
-.mat-column-CardType{
-    flex: none;
-    width: 20%;
-}
-.mat-column-FeePOS{ 
-    flex: none;
-    width: 7%;
-}
-.mat-column-FeeCost{
-    flex: none;
-    width: 7%; 
-}
-.mat-column-FeeMin{
-    flex: none;
-    width: 7%; 
-}
-.mat-column-FeeMax{
-    flex: none;
-    width: 7%; 
-}
-.mat-column-MaxLimitAmountTransaction{
-    flex: none;
-    width: 20%; 
-}
-.mat-column-LevelTransactionCard{
-    flex: none;
-    width: 7%;
-}
+  td mat-form-field{
+    width: 100px ;
+    }
+
