--- a/src/main.scss
+++ b/src/main.scss
@@ -22,3 +22,5 @@ $fa-font-path:"theme/fontawesome/webfonts";
 @import "theme/fontawesome/scss/solid.scss";
 // @import "~ngx-easy-table/style.scss";
 @import "~@busacca/ng-pick-datetime/assets/style/picker.min.css";
+// add css for angular-calendar lib
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
