--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -81,7 +81,7 @@
   <button mat-menu-item routerLink="/clients">{{ "Toolbar_Component.lblClient" | translate }}</button>
   <button mat-menu-item routerLink="/groups">{{ "Toolbar_Component.lblGroup" | translate }}</button>
   <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/centers">Centers</button>
-  <button mat-menu-item routerLink="/accounts/balance-clients">{{ "Quản lý số dư khách hàng" | translate }}</button>
+  <button mat-menu-item routerLink="/accounts/balance-clients">{{ "Quản lý công nợ khách hàng khách hàng lẻ" | translate }}</button>
   <button mat-menu-item *midasHasPermission="'MANAGER' || 'ALL_FUNCTIONS'" routerLink="/accounts/balance-teller">
     {{ "Quản lý số dư teller" | translate }}
   </button>
