--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -7,7 +7,7 @@
   <div class="navigation-panel" fxLayout="column">
     <!-- TODO: Allow customization by organization -->
     <div class="app-brand" [routerLink]="['/home']">
-      <img src="assets/images/Midas-Logo-01.png" alt="app-logo" class="app-logo" />
+      <img src="../../../../assets/images/Midas-logo.png" alt="app-logo" class="app-logo" />
       <span class="app-logo-text text-muted">MIDAS</span>
     </div>
 
