--- a/src/assets/styles/_loader.scss
+++ b/src/assets/styles/_loader.scss
@@ -1,42 +1,22 @@
 .loader-wrapper {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    position: absolute;
-    animation: rotate 0.8s infinite 0.2s;
-  }
-
-  .bottom {
-    border-width: 0 90px 90px 90px;
-    border-color: transparent transparent #1fb050 transparent;
-    bottom: calc(50% - 100px);
-    left: calc(50% - 90px);
-  }
-
-  .top {
-    border-width: 90px 90px 0 90px;
-    border-color: #b4d575 transparent transparent transparent;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation: spin 0.8s linear infinite;
     top: calc(50% - 100px);
     left: calc(50% - 90px);
+    width: 120px;
+    height: 110px;
   }
-
-  .left {
-    border-width: 90px 0 90px 90px;
-    border-color: transparent transparent transparent #1074b9;
-    top: calc(50% - 90px);
-    left: calc(50% - 100px);
-  }
-
-  .right {
-    border-width: 90px 90px 90px 0;
-    border-color: transparent #1daeec transparent transparent;
-    top: calc(50% - 90px);
-    right: calc(50% - 100px);
-  }
+  @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+  @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+  @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
   @keyframes rotate {
     from { transform: rotate(0deg); }
