--- a/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
@@ -14,12 +14,15 @@
 
   <mat-form-field *ngIf="!disable" class="select-book">
     <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}</mat-label>
-    <input [required]="!disable" [readonly]="disable" type="text"
+    <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
+      <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
+    </div>
+    <input *ngIf="!isLoading" [required]="!disable" [readonly]="disable" type="text"
            placeholder="{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}" matInput
            formControlName="clientAdvanceCash" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
       <mat-option *ngFor="let cl of filteredClient" [value]="cl">
-        {{ cl.displayName ? cl.displayName : cl.name }}
+        {{ cl.displayName ? displayClientWithExternalId(cl) : cl.name }}
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
